--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "carousel": "0.0.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-modal": "^3.8.1",
     "react-responsive": "^6.1.1",
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
