--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "carousel": "0.0.3",
+    "mongod": "^2.0.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-modal": "^3.8.1",
